[package]
name = "recording_analyzer_lambda_function"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.0", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
futures = "0.3"
aws_lambda_events = "0.15.0"